--- a/CValexsite/cvsitealex.html
+++ b/CValexsite/cvsitealex.html
@@ -54,9 +54,11 @@
              </div>
              <div class="h5text">
                  <p>Passionné par le développement de site web je me suis lancé en tant que freelance dans le but de participer à des 
-                 projets, afin de valoriser des entreprises ou des particuliers en leur donnant une meilleure 
-                 visibilité sur le web afin de pouvoir toucher un plus large public. Je souhaite être un des acteurs
-                  de leur projet et les aidés pas-à-pas vers leurs réalisations.</p>
+                 projets, pour valoriser des entreprises ou des particuliers en leur donnant une meilleure 
+                 visibilité sur le web afin qu'il puisse toucher un plus large public, et ainsi augmentaient l'impact de leur 
+                 société en ciblant un plus grand nombre de client. je souhaite être un des 
+                 acteurs
+                  de leur projet et les aidés pas-à-pas vers leurs réalisations tout en gardant le maintien d'un service au fil du temps.</p>
                   </div>
                  <div class="h6g">
                   <h6>LOISIR</span></h6>
