date de la formation

--- a/CValexsite/cvsitealex.html
+++ b/CValexsite/cvsitealex.html
@@ -18,9 +18,14 @@
                           <h2><span class="chapeauetude"><i class="fas fa-graduation-cap"></span></i><span class="h2text">
                           FORMATION</span></h2>
                           <div class="dateopen">
-                           <p><span class="date">2020</span><br/><span class="nice">nice</span><span class="open"> OPENCLASSROOMS</span> <br/>
-                           <span class="dev">Développeur web junior</span>
-                           </p>
+                          <div class="datenice">
+                           <div class="date">2020</div><br/><div class="nice">Nice</div>
+                           </div>
+                           <div class="opendev">
+                           <div class="open"> OPENCLASSROOMS</div> 
+                           <div class="dev">Développeur web junior</div>
+                           </div>
+                           </div>
                        <div id="texth2">
                            <div class="langage">langage et frawmorks:</div> <div class="html">HTML et CSS</div>
                             <div class="java">Java Script</div>
