mise en page icone

--- a/CValexsite/cvsitealex.html
+++ b/CValexsite/cvsitealex.html
@@ -18,7 +18,9 @@
                           <h2><span class="chapeauetude"><i class="fas fa-graduation-cap"></span></i><span class="h2text">
                           FORMATION</span></h2>
                           <div class="dateopen">
+                          <div class="icone"><i class="fas fa-bullseye"></i></div>
                           <div class="datenice">
+
                            <div class="date">2020</div><br/><div class="nice">Nice</div>
                            </div>
                            <div class="opendev">
@@ -81,7 +83,7 @@
                  <div class="h6g">
                   <h6>LOISIR</span></h6>
                   </div>
-                  <p><span><i class="fas fa-swimmer"></i></span></p>
+                  <p><span><i class="fas fa-swimmer"></i></span><i class="fas fa-dumbbell"></i><i class="fas fa-book-reader"></i></p>
                   </nav>
                  </div>
          </div>
