icone front end

--- a/CValexsite/cvsitealex.html
+++ b/CValexsite/cvsitealex.html
@@ -77,13 +77,16 @@
                  visibilité sur le web afin qu'il puisse toucher un plus large public, et ainsi augmentaient l'impact de leur 
                  société en ciblant un plus grand nombre de client. je souhaite être un des 
                  acteurs
-                  de leur projet et les aidés pas-à-pas vers leurs réalisations tout en gardant le maintien d'un service au
+                  de leur projet et les aidés pas-à-pas vers leurs réalisations tout en proposant le maintien d'un service au
                    fil du temps.</p>
                   </div>
                  <div class="h6g">
                   <h6>LOISIR</span></h6>
                   </div>
-                  <p><span><i class="fas fa-swimmer"></i></span><i class="fas fa-dumbbell"></i><i class="fas fa-book-reader"></i></p>
+                  <div class="touteslesicone">
+                  <div class="nage"><i class="fas fa-swimmer"></i></div><div class="altère"><i class="fas fa-dumbbell"></i></div>
+                  <div class="livre"><i class="fas fa-book-reader"></i></div>
+                  </div>
                   </nav>
                  </div>
          </div>
