front end corrections bordure

--- a/CValexsite/cvsitealex.html
+++ b/CValexsite/cvsitealex.html
@@ -18,7 +18,7 @@
                       <div class="prenomj"><h1>Alexandre </h1> </div> <div class="nom"><h1> Meillassoux</h1></div>
                   </div> 
                      <div class="soustitre">
-                       <div class="deve"><h1>Dévev</h1></div><h1>oppeur web freelance</h1>
+                       <div class="deve"><h1>Dével</h1></div><h1>oppeur web freelance</h1>
                   </div>
                 </div>
                            
