--- a/CValexsite/cvsitealex.html
+++ b/CValexsite/cvsitealex.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="cvsitealexcss.css"/> 
         <title>Site d'Alexandre Meillassoux</title>
         <script src="https://kit.fontawesome.com/9f32a15078.js" crossorigin="anonymous"></script>
-        <meta name="viewport" content="width=device-width" />
+        <meta name="viewport" content="devise-width" />
      </head>
        <body>
     
