--- a/CValexsite/cvsitealex.html
+++ b/CValexsite/cvsitealex.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE >
 <html>
     <head>
         <meta charset="UTF-8"/>
@@ -160,7 +160,7 @@
                         fil du temps.</p>
                   </div>
                     <div class="h2loisir">
-                   <h2>LOISIR</span></h2>
+                   <h2>LOISIR</h2>
                 </div>
                   <div class="touteslesicone">
                  <div class="nage"><i class="fas fa-swimmer"></i></div><div class="altère"><i class="fas fa-dumbbell"></i></div>
