--- a/CValexsite/cvsitealex.html
+++ b/CValexsite/cvsitealex.html
@@ -54,22 +54,23 @@
                               <div class="date">2020</div><div class="nice">Nice</div>
                            </div>
 
+                    <div class="opendevtexth2">
                      <div class="opendev">
                       <div class="open"> Stage chez: Développeur-marketing</div> 
                       <div class="dev">Développeur web </div>
                      </div>
-                    </div>
-
-                         <div id="texth2">
-                           <div class="competence">Competences aquises:</div>
-                           <div class="textcompetence">1) Stratégie de référencement des sites sur Google. 2) Mise en page de sites rapide et 
-                            agréable pour l'utilisateur. 3) Travaillé en équipe en structurent un projet sur Git et Github.   </div>
-                         </div>
-                             
+                     
+                     <div id="texth2conpetences">
+                       <div class="competence2">Competences aquises:</div>
+                       <div class="textcompetence2">1) Stratégie de référencement des sites sur Google. 2) Mise en page de sites rapide et 
+                         agréable pour l'utilisateur. 3) Travaillé en équipe en structurent un projet sur Git et Github.   </div>
+                        </div>
+                        </div>
+                         </div>    
 
                          <h2><span class="valise"><i class="fas fa-briefcase"></i></span>
                            <span class="h2text"> EXPERIENCE PROFESSIONELLE</span></h2>  
-                             <div class="textexperiencepro">
+                         <div class="textexperiencepro">
                               <div class="toutedate">
                                <div class="iconeexperiencepro"><i class="fas fa-bullseye"></i> </div>
                                 <div class="textedate">
@@ -78,8 +79,8 @@
                               </div>
                             </div>
 
-                    <div class="textexper">
-                      <div class="fastdev">     
+                          <div class="textexper">
+                         <div class="fastdev">     
                         <div class="faststories">Fast stories</div>
                         <div class="devweb">  Développeur web</div>
                       </div>   
@@ -160,7 +161,7 @@
                         fil du temps.</p>
                   </div>
                     <div class="h2loisir">
-                   <h2>LOISIR</h2>
+                   <h2>LOISIRS</h2>
                 </div>
                   <div class="touteslesicone">
                  <div class="nage"><i class="fas fa-swimmer"></i></div><div class="altère"><i class="fas fa-dumbbell"></i></div>
