--- a/CValexsite/cvsitealex.html
+++ b/CValexsite/cvsitealex.html
@@ -26,7 +26,7 @@
 
            
                            
-                   <h2><span class="chapeauetude"><i class="fas fa-graduation-cap"></span></i><span class="h2text">
+                   <h2><span class="chapeauetude"><i class="fas fa-graduation-cap"></i></span><span class="h2text">
                      FORMATION</span></h2>
                      <div class="dateopen">
                        <div class="icone"><i class="fas fa-bullseye"></i></div>
