espace de texte

--- a/CValexsite/cvsitealex.html
+++ b/CValexsite/cvsitealex.html
@@ -29,11 +29,13 @@
                    <h2><span class="chapeauetude"><i class="fas fa-graduation-cap"></i></span><span class="h2text">
                      FORMATION</span></h2>
 
-                     <div class="divdateemploicompetence">
+                     <div class="textexperiencepro">
+                      <div class="toutedate">
                        <div class="icone"><i class="fas fa-bullseye"></i></div>
                        <div class="datenice">
                          <div class="date">2019</div><div class="nice">Nice</div>
                         </div>
+                      </div>
                           <div class="formationcompetence">
                           <div class="formationtitresoutitre">
                          <div class="formationtitre"> OPEN CLASSROOMS</div> 
@@ -49,12 +51,13 @@
                         </div>
                       </div>   
                     </div>
-                     <div class="divdateemploicompetence">
+                    <div class="textexperiencepro">
+                      <div class="toutedate">
                      <div class="icone"><i class="fas fa-bullseye"></i></div>
                       <div class="datenice">
                       <div class="date">2020</div><div class="nice">Nice</div>
                      </div>
-
+                      </div>
                     <div class="formationcompetence">
                      <div class="formationtitresoutitre">
                       <div class="formationtitre"> Stage chez: Développeur-marketing</div> 
